# docs/swagger.json
@@ -1727,7 +1727,7 @@
         "models.BarberCapsterPost": {
             "type": "object",
             "properties": {
-                "capster_jd": {
+                "capster_id": {
                     "type": "integer"
                 }
             }
@@ -1767,17 +1767,17 @@
                 "is_active": {
                     "type": "boolean"
                 },
+                "latitude": {
+                    "type": "number"
+                },
+                "longitude": {
+                    "type": "number"
+                },
                 "operation_end": {
-                    "type": "integer"
-                },
-                "operation_start": {
-                    "type": "integer"
-                },
-                "pin_map": {
                     "type": "string"
                 },
-                "starts": {
-                    "type": "number"
+                "operation_start": {
+                    "type": "string"
                 }
             }
         },
